--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "esbuild": "^0.15.5",
+    "html-minifier": "^4.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
