Update README.md and some stuff

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Plugin",
-  "id": "1142112849918991568",
+  "id": "<plugin-id>",
   "api": "1.0.0",
   "editorType": ["figma"],
   "main": "./build/plugin.js",
